--- a/trunk/tasma/user-manager/po/ca.po
+++ b/trunk/tasma/user-manager/po/ca.po
@@ -1,267 +1,275 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# User manager per a Pardus
+# Copyright (C) 2007 Free Software Foundation, Inc.
+# This file is distributed under the same license as the Pardus package.
+# Jaume Villalba <javs@tinet.cat>, 2007.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: User Manager per a Pardus en català\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-12-12 13:28+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2007-03-28 03:20+0100\n"
+"Last-Translator: Jaume Villalba <javs@tinet.cat>\n"
+"Language-Team: Catalan translators Pardus <Pardus-translation-ca@uludag.org.tr>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: mainview.py:30 mainview.py:66
-msgid ""
-"Cannot connect to the COMAR! If it is not running you should start it with "
-"the 'service comar start' command in a root console."
-msgstr ""
+# S'ha de traduir Service comar start?
+#: mainview.py:30
+#: mainview.py:66
+#, fuzzy
+msgid "Cannot connect to the COMAR! If it is not running you should start it with the 'service comar start' command in a root console."
+msgstr "Ho sent. No es pot connectar amb el COMAR. En cas que no estigués activat, engegueu-lo amb l'ordre 'service comar start' en una consola amb mode arrel."
 
 #: mainview.py:46
 msgid "Waiting COMAR..."
-msgstr ""
+msgstr "Cal que esperem la connexió amb el COMAR..."
 
 #: mainview.py:47
 msgid "Connection to the COMAR unexpectedly closed, trying to reconnect..."
-msgstr ""
+msgstr "La connexió amb el COMAR s'ha tancat inesperadament, mirem ara de reconnectar..."
 
 #: user-manager.py:30
 msgid "User Management"
-msgstr ""
+msgstr "Gestió dels usuaris"
 
 #: user-manager.py:76
 msgid "User manager module is already started!"
-msgstr ""
+msgstr "Ho sent. El mòdul del gestor d'usuaris ja està en marxa"
 
 #: user-manager.py:81
 msgid "User Manager"
-msgstr ""
+msgstr "Gestor d'usuaris"
 
-#: groupedit.py:22 useredit.py:25
+#: groupedit.py:22
+#: useredit.py:25
 msgid "ID:"
-msgstr ""
+msgstr "ID:"
 
-#: groupedit.py:30 useredit.py:37
+#: groupedit.py:30
+#: useredit.py:37
 msgid "Select manually"
-msgstr ""
+msgstr "Selecciona manualment"
 
 #: groupedit.py:61
 msgid "Group name:"
-msgstr ""
+msgstr "Nom del grup:"
 
 #: groupedit.py:97
 msgid "Enter a group ID or use auto selection"
-msgstr ""
+msgstr "Introduïu una ID de grup o feu servir la selecció automàtica"
 
 #: groupedit.py:100
 msgid "Enter a group name"
-msgstr ""
+msgstr "Introduïu un nom per al grup"
 
 #: groupedit.py:127
 msgid "Enter Information For New Group"
-msgstr ""
+msgstr "Introduïu informació per al nou grup"
 
 #: groupedit.py:175
 msgid "Adding group..."
-msgstr ""
+msgstr "Afegim un grup..."
 
-#: groupedit.py:185 useredit.py:554 useredit.py:586
+#: groupedit.py:185
+#: useredit.py:554
+#: useredit.py:586
 #, python-format
 msgid "Operation failed, reason:<br>%s"
-msgstr ""
+msgstr "L'operació ha fallat, la raó es:<br>%s"
 
-#: groupedit.py:187 useredit.py:556 useredit.py:588
+#: groupedit.py:187
+#: useredit.py:556
+#: useredit.py:588
 msgid "You are not allowed to do that"
-msgstr ""
+msgstr "Ho sent. No teniu autorització per a fer això"
 
-#: groupedit.py:189 useredit.py:558 useredit.py:590
+#: groupedit.py:189
+#: useredit.py:558
+#: useredit.py:590
 msgid "Comar script error :("
-msgstr ""
+msgstr "Hi ha hagut un error en la seqüència del COMAR :("
 
 #: browser.py:94
 msgid "Show system user and groups"
-msgstr ""
+msgstr "Mostra l'usuari del sistema i els grups"
 
-#: browser.py:104 browser.py:114
+#: browser.py:104
+#: browser.py:114
 msgid "ID"
-msgstr ""
+msgstr "ID"
 
 #: browser.py:106
 msgid "User name"
-msgstr ""
+msgstr "Nom de l'usuari"
 
 #: browser.py:107
 msgid "Full name"
-msgstr ""
+msgstr "Nom complet"
 
 #: browser.py:116
 msgid "Group name"
-msgstr ""
+msgstr "Nom del grup"
 
 #: browser.py:121
 msgid "Users"
-msgstr ""
+msgstr "Usuaris"
 
 #: browser.py:122
 msgid "Groups"
-msgstr ""
+msgstr "Grups"
 
 #: browser.py:131
 msgid "User Manager Help"
-msgstr ""
+msgstr "Ajuda del gestor d'usuaris"
 
+# S'ha de traduir User Name?
 #: browser.py:138
 #, python-format
-msgid ""
-"<big><b>Should I delete this user?</b></big><br><br>Name: %s<br>User name: %"
-"s<br>ID: %d"
-msgstr ""
+msgid "<big><b>Should I delete this user?</b></big><br><br>Name: %s<br>User name: %s<br>ID: %d"
+msgstr "<big><b>Que voleu eliminar aquest usuari?</b></big><br><br>Nom: %s<br>Nom de l'usuari: %s<br>ID: %d"
 
 #: browser.py:144
 msgid "Delete User"
-msgstr ""
+msgstr "Suprimeix l'usuari"
 
 #: browser.py:145
 msgid "Delete user and files"
-msgstr ""
+msgstr "Suprimeix l'usuari i els arxius"
 
 #: browser.py:146
 msgid "Delete user"
-msgstr ""
+msgstr "Suprimeix l'usuari"
 
+# S'ha de traduir Group Name?
 #: browser.py:157
 #, python-format
-msgid ""
-"<big><b>Should I delete this group?</b></big><br><br>Group name: %s<br>ID: %d"
-msgstr ""
+msgid "<big><b>Should I delete this group?</b></big><br><br>Group name: %s<br>ID: %d"
+msgstr "<big><b>Que voleu eliminar aquest usuari?</b></big><br><br>Nom del grup: %s<br>ID: %d"
 
-#: browser.py:163 browser.py:164
+#: browser.py:163
+#: browser.py:164
 msgid "Delete Group"
-msgstr ""
+msgstr "Suprimeix el grup"
 
 #: useredit.py:72
 msgid "User name:"
-msgstr ""
+msgstr "Nom d'usuari:"
 
 #: useredit.py:103
 msgid "Full name:"
-msgstr ""
+msgstr "Nom complet:"
 
 #: useredit.py:126
 msgid "Home:"
-msgstr ""
+msgstr "Inici:"
 
 #: useredit.py:158
 msgid "Select user's home directory"
-msgstr ""
+msgstr "Seleccioneu el directori d'inici de l'usuari"
 
 #: useredit.py:167
 msgid "Password:"
-msgstr ""
+msgstr "Mot de pas:"
 
 #: useredit.py:173
 msgid "Confirm password:"
-msgstr ""
+msgstr "Repeteix el mot de pas:"
 
 #: useredit.py:202
 msgid "Shell:"
-msgstr ""
+msgstr "Intèrpret de comandaments (shell):"
 
 #: useredit.py:224
 msgid "Please specify an existing shell command"
-msgstr ""
+msgstr "Si us plau, especifiqueu una ordre de shell existent."
 
 #: useredit.py:226
 msgid "Specified shell command is not executable"
-msgstr ""
+msgstr "L'ordre de shell especificada no és executable"
 
 #: useredit.py:268
 msgid "Group"
-msgstr ""
+msgstr "Grup"
 
 #: useredit.py:269
 msgid "Permission"
-msgstr ""
+msgstr "Permís"
 
 #: useredit.py:279
 msgid "Main group:"
-msgstr ""
+msgstr "Grup principal:"
 
 #: useredit.py:375
 msgid "Start with typing this user's full name."
-msgstr ""
+msgstr "Comenceu a escriure el nom complet d'aquest usuari."
 
 #: useredit.py:378
 msgid "You should enter a password for this user."
-msgstr ""
+msgstr "Heu de donar un mot de pas per a aquest usuari"
 
 #: useredit.py:383
 msgid "Password must be longer."
-msgstr ""
+msgstr "El mot de pas ha de ser més llarg."
 
 #: useredit.py:387
 msgid "Dont use your full name or user name as a password."
-msgstr ""
+msgstr "No feu servir el nom complet o el nom d'usuari com a mot de pas."
 
 #: useredit.py:390
 msgid "Passwords don't match."
-msgstr ""
+msgstr "Els mots de pas són diferents"
 
 #: useredit.py:393
 msgid "You must enter a user ID or use the auto selection."
-msgstr ""
+msgstr "Heu d'introduir una ID per a l'usuari o fer servir la selecció automàtica."
 
 #: useredit.py:398
 msgid "You must enter a user name."
-msgstr ""
+msgstr "Heu d'introduir un nom per a l'usuari"
 
 #: useredit.py:401
 msgid "This user name is used by another user."
-msgstr ""
+msgstr "Aquest nom ja està registrat per a un altre usuari"
 
 #: useredit.py:405
 msgid "User name must not start with a number."
-msgstr ""
+msgstr "El nom d'usuari no pot començar amb un número"
 
 #: useredit.py:408
 msgid "You should select at least one group this user belongs to."
-msgstr ""
+msgstr "Heu d'escollir almenys un dels grups als quals pertany aquest usuari"
 
 #: useredit.py:439
 msgid "Edit User's Information"
-msgstr ""
+msgstr "Edita la informació de l'usuari"
 
 #: useredit.py:441
 msgid "Enter Information For New User"
-msgstr ""
+msgstr "Introduïu la informació per al nou usuari"
 
 #: useredit.py:443
 msgid "Show all groups"
-msgstr ""
+msgstr "Mostra tots els grups"
 
 #: useredit.py:533
-msgid ""
-"You are removing yourself from the 'wheel' system group, you might not use "
-"your administrator permissions after that."
-msgstr ""
+#, fuzzy
+msgid "You are removing yourself from the 'wheel' system group, you might not use your administrator permissions after that."
+msgstr "Us esteu esborrant del grup de sistema 'wheel', després no podreu utilitzar els vostres permissos com a administrador."
 
 #: useredit.py:534
 msgid "Important Group Change"
-msgstr ""
+msgstr "Canvi de grup important"
 
 #: useredit.py:541
 msgid "Changing user information..."
-msgstr ""
+msgstr "S'està canviant la informació de l'usuari"
 
 #: useredit.py:575
 msgid "Adding user..."
-msgstr ""
+msgstr "Afegim l'usuari..."
 
 #: useredit.py:615
 msgid "Getting user information..."
-msgstr ""
+msgstr "Recopilem la informació de l'usuari..."
