--- a/trunk/tasma/service-manager/po/ca.po
+++ b/trunk/tasma/service-manager/po/ca.po
@@ -1,117 +1,129 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Traslation of the Service Manager.po of Pardus to català
+# Catalan Translations of Pardus
+# Copyright (C) 2007 Pardus
+# This file is distributed under the same license as the Pardus package.
+# Jaume Villalba <javs@tinet.cat>, 2007.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: Service Manager\n"
+"Report-Msgid-Bugs-To: Pardus-translation-ca@uludag.org.tr\n"
 "POT-Creation-Date: 2006-11-07 21:36+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2007-03-28 01:36+0100\n"
+"Last-Translator: Jaume Villalba <javs@tinet.cat>\n"
+"Language-Team: Català <Pardus-translation-ca@uludag.org.tr>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: src/service-manager.py:55 src/service-manager.py:350 src/mainform.py:97
+#: src/service-manager.py:55
+#: src/service-manager.py:350
+#: src/mainform.py:97
 msgid "Service Manager"
-msgstr ""
+msgstr "Gestor de serveis"
 
 #: src/service-manager.py:185
 msgid "You are not allowed to do this operation."
-msgstr ""
+msgstr "No teniu autorització per a efectuar aquesta operació"
 
 #: src/service-manager.py:185
 msgid "Access Denied"
-msgstr ""
+msgstr "L'accès us ha estat denegat"
 
 #: src/service-manager.py:187
 msgid "COMAR script execution failed."
-msgstr ""
+msgstr "Hi ha hagut un error en l'execució de la seqüència COMAR."
 
 #: src/service-manager.py:187
 msgid "Script Error"
-msgstr ""
+msgstr "Hi ha hagut un error de seqüència"
 
 #: src/service-manager.py:192
 msgid "Unable to start service."
-msgstr ""
+msgstr "No es pot engegar el servei."
 
-#: src/service-manager.py:192 src/service-manager.py:195
+#: src/service-manager.py:192
+#: src/service-manager.py:195
 msgid "Failed"
-msgstr ""
+msgstr "Ha fallat"
 
 #: src/service-manager.py:195
 msgid "Unable to stop service."
-msgstr ""
+msgstr "No es pot aturar el servei."
 
-#: src/service-manager.py:224 src/mainform.py:101
+#: src/service-manager.py:224
+#: src/mainform.py:101
 msgid "Select a service from list."
-msgstr ""
+msgstr "Tria un servei de la llista."
 
-#: src/service-manager.py:232 src/mainform.py:103
+#: src/service-manager.py:232
+#: src/mainform.py:103
 msgid "Start"
-msgstr ""
+msgstr "Engega"
 
 #: src/service-manager.py:237
 #, python-format
 msgid "%s is running."
-msgstr ""
+msgstr "%s està en marxa."
 
 #: src/service-manager.py:240
 #, python-format
 msgid "%s is not running."
-msgstr ""
+msgstr "%s no està en marxa."
 
 #: src/service-manager.py:242
 msgid "Execute startup script"
-msgstr ""
+msgstr "Posa en marxa la seqüència d'engegada del sistema"
 
 #: src/service-manager.py:243
 msgid "Execuete shutdown script"
-msgstr ""
+msgstr "Posa en marxa la seqüència d'aturada del sistema"
 
 #: src/service-manager.py:307
 msgid ""
 "If you stop this service, you may have problems.\n"
 "Are you sure you want to stop this service?"
 msgstr ""
+"En aturar aquest servei, podeu tenir problemes.\n"
+"Esteu segur/a que el voleu aturar?"
 
 #: src/service-manager.py:345
 msgid "Service Manager is already running!"
-msgstr ""
+msgstr "Ho sent. El gestor de serveis ja està en marxa"
 
-#: src/mainform.py:82 src/mainform.py:108
+#: src/mainform.py:82
+#: src/mainform.py:108
 msgid "1"
-msgstr ""
+msgstr "1"
 
-#: src/mainform.py:83 src/mainform.py:109
+#: src/mainform.py:83
+#: src/mainform.py:109
 msgid "Service"
-msgstr ""
+msgstr "Servei"
 
-#: src/mainform.py:84 src/mainform.py:110
+#: src/mainform.py:84
+#: src/mainform.py:110
 msgid "Run on Startup"
-msgstr ""
+msgstr "Posa en marxa en engegar l'ordinador"
 
-#: src/mainform.py:85 src/mainform.py:111
+#: src/mainform.py:85
+#: src/mainform.py:111
 msgid "Package"
-msgstr ""
+msgstr "Paquet"
 
 #: src/mainform.py:99
 msgid "Run on startup."
-msgstr ""
+msgstr "Posa'l en marxa en engegar l'ordinador"
 
 #: src/mainform.py:100
 msgid "Don't run on startup."
-msgstr ""
+msgstr "No el poses en marxa en engegar l'ordinador"
 
 #: src/mainform.py:106
 msgid "&List servers only."
-msgstr ""
+msgstr "&Només servidors de llistat."
 
 #: src/mainform.py:107
 msgid "Alt+L"
-msgstr ""
+msgstr "Alt+L"
+
